--- a/index.html
+++ b/index.html
@@ -1,201 +1,173 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>FreeFlow</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Pacifico&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg:#0a0d10;
-      --panel:#0f1318;
-      --muted:#dccfbe;
-      --accent:#ff7a1a;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; background:radial-gradient(1200px 900px at 50% -20%, #151a20 0%, var(--bg) 60%);
-      color:#fff; font:16px/1.5 Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      display:flex; flex-direction:column; align-items:center;
-    }
-    .wrap{width:min(940px,100%); padding:28px 18px 140px}
-    .brand{
-      font-family: Pacifico, cursive;
-      font-size: clamp(44px, 8.5vw, 96px);
-      color: var(--accent);
-      letter-spacing:.5px;
-      margin: 10px 0 6px;
-      text-shadow: 0 6px 22px rgba(255,122,26,.18);
-    }
-    .subtitle{
-      margin:0 0 28px; color:var(--muted);
-      font-size: clamp(20px, 3.4vw, 36px); font-weight:800;
-    }
-
-    .panel{
-      background:linear-gradient(180deg,#0d1116,#0a0e13);
-      border:1px solid #1a212a; border-radius:18px;
-      padding:18px; max-width:780px; margin: 0 auto 10px;
-      box-shadow: 0 10px 34px rgba(0,0,0,.35);
-    }
-    .pill{display:inline-block; margin:6px 8px 0 0; padding:8px 12px; border-radius:999px;
-      background:#121822; color:#b8c2ce; font-size:14px}
-    #heard,#reply{
-      margin-top:14px; padding:14px 16px; border-radius:14px; border:1px solid #1c232c;
-      background:#0a0f14; color:#e8eef6
-    }
-    #reply{background:linear-gradient(180deg,#15100c,#0d0a07); color:#ffd5b1; border-color:#2d1c12}
-
-    /* === PRZYCISK-LOGO === */
-    .ff-btn{
-      position:fixed; left:50%; bottom:26px; transform:translateX(-50%);
-      width:190px; height:190px; border-radius:50%; border:0; outline:0; cursor:pointer;
-      background:#000 center/cover no-repeat url("./file_000000000e9c62469156924aae2c3ff0.png");
-      /* jeśli zmienisz nazwę pliku, popraw ścieżkę powyżej */
-      box-shadow:0 14px 42px rgba(255,120,0,.38), inset 0 0 26px rgba(255,120,0,.2);
-      -webkit-tap-highlight-color:transparent;
-      transition:transform .15s ease, box-shadow .2s ease, filter .2s ease;
-    }
-    .ff-btn:active{ transform:translateX(-50%) scale(.97) }
-    .ff-btn.listening{
-      box-shadow:0 16px 60px rgba(255,120,0,.62), inset 0 0 36px rgba(255,120,0,.3);
-      filter:saturate(1.08);
-    }
-    .ff-btn::after{
-      content:""; position:absolute; inset:-10px; border-radius:50%;
-      border:2px solid rgba(255,140,0,.45); opacity:0; pointer-events:none;
-    }
-    .ff-btn.listening::after{ animation:ffpulse 1.9s ease-out infinite; opacity:1 }
-    @keyframes ffpulse{ from{transform:scale(.9);opacity:.7} to{transform:scale(1.9);opacity:0} }
-
-    .toast{
-      position:fixed; top:10px; left:50%; transform:translateX(-50%);
-      background:#11161d; color:#e7edf5; border:1px solid #1f2730; border-radius:12px;
-      padding:10px 14px; font-size:14px; box-shadow:0 8px 24px rgba(0,0,0,.35);
-      max-width:92%; display:none;
-    }
-    .show{display:block}
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>FreeFlow – Voice to Order</title>
+<style>
+  :root{
+    --bg:#0b0f14; --bg2:#111720; --text:#e9e9e9; --muted:#b8c0cc;
+    --brand:#ff7a1a; --brand2:#ff9a3c; --chip:#1a2230;
+  }
+  *{box-sizing:border-box}
+  body{
+    margin:0; background:linear-gradient(180deg,#0b0f14 0%, #0d141e 100%);
+    color:var(--text); font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;
+    min-height:100vh; display:flex; flex-direction:column;
+  }
+  header{padding:28px 22px 6px}
+  .logoTitle{
+    font-weight:800; font-size:36px; letter-spacing:.5px; color:var(--brand);
+  }
+  .subtitle{color:var(--text); opacity:.9; font-size:22px; margin-top:6px}
+  .card{
+    margin:18px; padding:16px; background:var(--bg2);
+    border-radius:18px; box-shadow:0 10px 30px rgba(0,0,0,.35), inset 0 0 0 1px #1b2430;
+  }
+  .chips{display:flex; flex-wrap:wrap; gap:10px; margin:2px 0 8px}
+  .chip{
+    font-size:14px; padding:10px 12px; border-radius:14px; color:#d8dee9;
+    background:var(--chip); border:1px solid #1f2a3a;
+  }
+  .pane{margin-top:8px; padding:14px; border-radius:14px; background:#0f1622; border:1px solid #1d2736}
+  .pane.muted{color:var(--muted)}
+  .pane.good{background:rgba(255,122,26,.08); border-color:rgba(255,122,26,.35)}
+  .hint{color:#8fa3bf; font-size:14px; margin:12px 18px 110px}
+  /* FAB with logo */
+  .fabWrap{
+    position:fixed; left:50%; bottom:22px; transform:translateX(-50%);
+    width:min(86vw,360px); display:flex; justify-content:center;
+  }
+  .fab{
+    position:relative; width:200px; height:200px; border-radius:50%;
+    border:none; background:#0e1520; cursor:pointer; outline:none;
+    box-shadow:0 20px 40px rgba(0,0,0,.55), inset 0 0 0 1px #1b2430;
+    display:grid; place-items:center;
+  }
+  .fab.glow{box-shadow:0 0 0 0 rgba(255,122,26,.55), 0 16px 40px rgba(0,0,0,.55);
+            animation:glow 1.6s ease-in-out infinite}
+  @keyframes glow{
+    0%{box-shadow:0 0 0 0 rgba(255,122,26,.55), 0 16px 40px rgba(0,0,0,.55)}
+    60%{box-shadow:0 0 60px 26px rgba(255,122,26,.18), 0 16px 40px rgba(0,0,0,.55)}
+    100%{box-shadow:0 0 0 0 rgba(255,122,26,.0), 0 16px 40px rgba(0,0,0,.55)}
+  }
+  .fab img{width:88%; height:88%; object-fit:contain; border-radius:50%}
+  .sr{position:absolute; width:1px; height:1px; overflow:hidden; clip:rect(0 0 0 0)}
+</style>
 </head>
 <body>
-  <div class="wrap" aria-live="polite">
-    <div class="brand">FreeFlow</div>
-    <div class="subtitle">Jak mogę pomóc?</div>
 
-    <div class="panel">
-      <div class="pill">Powiedz: <b>„dwie pizze pepperoni”</b></div>
-      <div class="pill">„zamów taxi na Dworzec”</div>
-      <div class="pill">„hotel w Krakowie na 2 noce”</div>
+<header>
+  <div class="logoTitle">FreeFlow</div>
+  <div class="subtitle">Złóż zamówienie</div>
+</header>
 
-      <div id="heard">🎙️ <i>Jeszcze nic nie nagrano.</i></div>
-      <div id="reply">🔊 <i>Witaj! Kliknij mikrofon na dole i powiedz, czego potrzebujesz.</i></div>
-    </div>
+<section class="card">
+  <div class="chips">
+    <div class="chip">„dwie pizze pepperoni”</div>
+    <div class="chip">„zamów taxi na Dworzec”</div>
+    <div class="chip">„hotel w Krakowie na 2 noce”</div>
   </div>
 
-  <button id="mic" class="ff-btn" aria-label="Nagraj / zatrzymaj"></button>
-  <div id="toast" class="toast"></div>
+  <div id="heard" class="pane muted">🎙️ Jeszcze nic nie nagrano.</div>
+  <div id="reply" class="pane good">🔊 Witaj! Kliknij mikrofon na dole i powiedz, czego potrzebujesz.</div>
+</section>
+
+<p class="hint">Podpowiedź: mów wyraźnie. W hałasie też zadziała, ale może potrzebować powtórki.</p>
+
+<div class="fabWrap">
+  <button id="micBtn" class="fab" aria-pressed="false">
+    <span class="sr">Przycisk mikrofonu</span>
+    <!-- Użyj własnego pliku logo.png w repo -->
+    <img src="./logo.png" alt="FreeFlow – mikrofon" />
+  </button>
+</div>
 
 <script>
-/* ========== UI helpers ========== */
-const $ = s => document.querySelector(s);
-const mic = $('#mic'), heard = $('#heard'), reply = $('#reply'), toast = $('#toast');
-const showToast = t => { toast.textContent = t; toast.classList.add('show'); setTimeout(()=>toast.classList.remove('show'), 1800); };
-function speak(t){ try{ speechSynthesis.cancel(); }catch{} const u=new SpeechSynthesisUtterance(t); u.lang='pl-PL'; speechSynthesis.speak(u); }
+  // --- Web Speech – rozpoznawanie mowy ---
+  const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+  const synth = window.speechSynthesis;
 
-/* Normalizacja PL */
-const repl = {'ą':'a','ć':'c','ę':'e','ł':'l','ń':'n','ó':'o','ś':'s','ź':'z','ż':'z'};
-const deaccent = s => s.replace(/[ąćęłńóśźż]/g,c=>repl[c]||c);
-const norm = s => (' '+deaccent(s.toLowerCase()).replace(/[.,!?]/g,' ')+' ').replace(/\s+/g,' ');
+  const micBtn = document.getElementById('micBtn');
+  const heard  = document.getElementById('heard');
+  const reply  = document.getElementById('reply');
 
-/* liczebniki -> ilość */
-const NUM = {"jeden":1,"jedna":1,"jedno":1,"dwa":2,"dwie":2,"trzy":3,"cztery":4,"piec":5,"szesc":6,"siedem":7,"osiem":8,"dziewiec":9,"dziesiec":10};
-const qtyFrom = t => { const m=t.match(/\b(\d{1,2})\b/); if(m) return +m[1]; for(const [w,n] of Object.entries(NUM)) if(t.includes(' '+w+' ')) return n; return 1; };
+  let rec = null, listening = false;
 
-/* aliasy jedzenia */
-const FOOD = [
-  {key:'pizza pepperoni', names:['pizza pepperoni','pizze pepperoni','pizze peperoni','pepperoni','peperoni','pepp','peproni','papperoni']},
-  {key:'pizza margherita', names:['pizza margherita','pizze margherita','margherita','margarita']},
-  {key:'pizza hawajska', names:['pizza hawajska','pizze hawajska','hawajska']},
-  {key:'pizza', names:['pizza','pizze','pizz']},
-  {key:'burger', names:['burger','hamburger']},
-  {key:'cola zero', names:['cola zero','coca cola zero','kola zero']},
-  {key:'cola', names:['cola','coca cola','kola']},
-  {key:'woda', names:['woda','woda gazowana','woda niegazowana']}
-];
-function findFood(t){
-  for(const it of FOOD){
-    for(const n of it.names){
-      const ne = deaccent(n);
-      if(t.includes(' '+ne+' ')) return it.key;
-      if(t.replace(/\s+/g,'').includes(ne.replace(/\s+/g,''))) return it.key;
-    }
-  } return null;
-}
-
-/* Prosty router intencji */
-function handleIntent(raw){
-  const t = norm(raw);
-  if(t.includes(' anuluj ')||t.includes(' przerwij ')||t.includes(' stop ')) return 'Ok, anulowano.';
-
-  if(t.includes(' taxi ')||t.includes(' taksi ')||t.includes(' kierowc')||t.includes(' przejazd '))
-    return 'Jasne! Podaj skąd i dokąd jedziemy?';
-
-  if(t.includes(' hotel ')||t.includes(' nocleg ')||t.includes(' rezerwacj'))
-    return 'Jasne! Powiedz miasto, datę przyjazdu i liczbę nocy.';
-
-  if(t.includes(' pizza ')||t.includes(' pizze ')||t.includes(' burger ')||t.includes(' cola ')||t.includes(' woda ')||t.includes(' pepperoni ')||t.includes(' peperoni ')){
-    const q = qtyFrom(t);
-    const item = findFood(t) || 'pozycja';
-    return `Dodaję ${q} × ${item}. Czy dorzucić coś jeszcze?`;
+  function speak(text){
+    try{
+      const u = new SpeechSynthesisUtterance(text);
+      u.lang = 'pl-PL';
+      u.rate = 1.0; u.pitch = 1.0;
+      synth.cancel(); synth.speak(u);
+    }catch(e){}
   }
 
-  if(t.includes(' zamow ')||t.includes(' zlozyc ')||t.includes(' zamowi '))
-    return 'Jasne! Co podać? Pizza, burger czy napoje?';
+  function handleIntent(text){
+    const t = text.toLowerCase();
 
-  if(t.includes(' dzien dobry ')||t.includes(' czesc ')||t.includes(' hej '))
-    return 'Cześć! Powiedz, co zamawiamy: dwie pizze pepperoni, taxi czy hotel?';
-
-  return 'Powiedz np. „dwie pizze pepperoni”, „zamów taxi na Dworzec”, albo „hotel w Krakowie na 2 noce”.';
-}
-
-/* ========== Rozpoznawanie mowy (Web Speech API) ========== */
-let rec=null, active=false;
-(function initASR(){
-  const R = window.SpeechRecognition || window.webkitSpeechRecognition;
-  if(!R){ showToast('Brak Web Speech API – otwórz w Chrome.'); return; }
-  rec = new R();
-  rec.lang = 'pl-PL';
-  rec.interimResults = true; rec.maxAlternatives = 1;
-
-  rec.onstart = ()=>{ mic.classList.add('listening'); showToast('Nasłuchuję…'); };
-  rec.onend   = ()=>{ mic.classList.remove('listening'); active=false; };
-  rec.onerror = e => { mic.classList.remove('listening'); active=false; showToast('Błąd: '+e.error); };
-
-  rec.onresult = ev=>{
-    let finalText='';
-    for(let i=ev.resultIndex;i<ev.results.length;i++){
-      const res=ev.results[i], txt=res[0].transcript;
-      if(res.isFinal) finalText += txt + ' ';
-      else heard.innerHTML = '🎙️ (w trakcie) ' + txt;
+    // proste reguły demo (fallback)
+    if(/cześć|hej|dzień dobry/.test(t)) return "Cześć! Co dla Ciebie zrobić?";
+    if(/anuluj|stop/.test(t)) return "Jasne, anulowałem.";
+    if(/pepperoni|peperoni/.test(t) && /pizza|pizz[e|y]?/.test(t)){
+      const qty = /dwie|2/.test(t) ? 2 : /trzy|3/.test(t) ? 3 : 1;
+      return `Zapisuję: ${qty}× pizza pepperoni. Potwierdzasz?`;
     }
-    finalText=finalText.trim();
-    if(finalText){
-      heard.innerHTML = '🗣️ ' + finalText;
-      const ans = handleIntent(finalText);
-      reply.innerHTML = '🔊 ' + ans;
-      speak(ans);
-    }
-  };
-})();
+    if(/taxi/.test(t)) return "OK, taxi. Skąd dokąd jedziemy?";
+    if(/hotel|nocleg/.test(t)) return "Jasne – który kierunek i na ile nocy?";
+    return "Zrozumiałem. Chcesz zamówić jedzenie, taxi czy nocleg?";
+  }
 
-function toggleMic(){
-  if(!rec){ showToast('Twoja przeglądarka nie wspiera rozpoznawania mowy.'); return; }
-  try{ speechSynthesis.cancel(); }catch{}
-  if(active){ rec.stop(); active=false; mic.classList.remove('listening'); }
-  else      { rec.start(); active=true;  mic.classList.add('listening'); }
-}
-mic.addEventListener('click', toggleMic);
+  function startRec(){
+    if(!SpeechRecognition){ reply.textContent="Twoja przeglądarka nie obsługuje rozpoznawania mowy."; return; }
+    if(rec){ try{ rec.stop(); }catch(e){} }
+    rec = new SpeechRecognition();
+    rec.lang = 'pl-PL';
+    rec.interimResults = true;
+    rec.maxAlternatives = 1;
+
+    rec.onstart = ()=>{
+      listening = true;
+      micBtn.classList.add('glow');
+      micBtn.setAttribute('aria-pressed','true');
+      reply.textContent = "🔊 Słucham… powiedz swoje zamówienie.";
+    };
+    rec.onerror = (e)=>{
+      listening = false;
+      micBtn.classList.remove('glow');
+      micBtn.setAttribute('aria-pressed','false');
+      reply.textContent = "Ups. Błąd mikrofonu: " + (e.error||'');
+    };
+    rec.onend = ()=>{
+      listening = false;
+      micBtn.classList.remove('glow');
+      micBtn.setAttribute('aria-pressed','false');
+    };
+    rec.onresult = (ev)=>{
+      let finalText='';
+      for(let i=ev.resultIndex;i<ev.results.length;i++){
+        const r = ev.results[i], tx = r[0].transcript;
+        if(r.isFinal) finalText += tx + ' ';
+        else heard.textContent = '🎙️ ' + tx;
+      }
+      finalText = finalText.trim();
+      if(finalText){
+        heard.textContent = '🗣️ ' + finalText;
+        const ans = handleIntent(finalText);
+        reply.textContent = '🔊 ' + ans;
+        speak(ans);
+      }
+    };
+    rec.start();
+  }
+
+  micBtn.addEventListener('click', ()=>{
+    if(listening){ try{ rec.stop(); }catch(e){} return; }
+    startRec();
+  });
+
+  // iOS/Android: pierwszy klik włącza TTS
+  document.body.addEventListener('touchstart', ()=>{}, {passive:true});
 </script>
 </body>
 </html>
